# zydecodb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  npm-dist-tag.yml  release.yml  tenant-isolation-soak.yml
clients/conformance/: README.md  vectors.json
clients/go/: README.md  client.go  collection.go  conn.go  errors.go  errors_test.go  go.mod  live_test.go  pool.go  proto.go  proto_conformance_test.go  tls_test.go
clients/go/examples/quickstart/: main.go
clients/go/examples/user_backend/: main.go
clients/python/: README.md  pyproject.toml
clients/python/tests/: test_conformance.py  test_live.py  test_protocol.py
clients/python/zydecodb/: __init__.py  _connection.py  _protocol.py  client.py  collection.py  errors.py  pool.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/examples/: quickstart.ts  user_backend.ts
clients/typescript/src/: client.ts  collection.ts  connection.ts  errors.ts  index.ts  pool.ts  protocol.ts
clients/typescript/test/: conformance.test.ts  errors.test.ts  live.test.ts
config/: zydecodb.dev.toml  zydecodb.docker.toml  zydecodb.example.toml  zydecodb.keys.example.toml  zydecodb.pods.example.toml  zydecodb.tls.example.toml
crates/zydecodb/: Cargo.toml
crates/zydecodb-document/: Cargo.toml
crates/zydecodb-document/src/: binary.rs  catalog.rs  encoding.rs  error.rs  filter.rs  keys.rs  lib.rs  planner.rs  query.rs  store.rs  update.rs  wire.rs
crates/zydecodb-document/tests/: find_integration.rs  proptest_wire.rs  store_integration.rs
crates/zydecodb-engine/: Cargo.toml  README.md
crates/zydecodb-engine/src/: apply_worker.rs  block_cache.rs  bloom.rs  compaction.rs  compaction_worker.rs  engine.rs  engine_handle.rs  engine_tests.rs  entry.rs  errors.rs  failpoints.rs  flush_worker.rs  frame.rs  iter.rs  keys.rs  lib.rs  manifest.rs  memtable.rs  metrics.rs  owned_snapshot.rs  policy.rs  reader_cache.rs  result_cache.rs  seq.rs  shipping.rs  snapshot.rs  soak_util.rs  sstable.rs  stats.rs  tenant_fair.rs  wal.rs  wal_sync.rs
crates/zydecodb-engine/src/engine/: catalog.rs  maintain.rs  mod.rs  open.rs  read.rs  stats.rs  write.rs
crates/zydecodb-engine/tests/: block_cache.rs  compaction.rs  concurrency_lock.rs  corruption_matrix.rs  crash_matrix.rs  determinism.rs  format_versions.rs  l2_promotion.rs  model.proptest-regressions  model.rs  owned_snapshot.rs  pods_primitives.rs  proptest_codecs.rs  range_scan.rs  read_concurrency.rs  resilience.rs  resilience_failpoints.rs  result_cache.rs  snapshot.rs  tenant_isolation_bench.rs  wal_corruption.rs
crates/zydecodb-engine/tests/fixtures/: README.md
crates/zydecodb-migrate/: Cargo.toml
crates/zydecodb-migrate/src/: classify.rs  client.rs  convert.rs  error.rs  graph.rs  lib.rs  pgdump.rs  run.rs
crates/zydecodb-migrate/tests/: adversarial.rs  pipeline.rs
crates/zydecodb/src/: admin.rs  admin_dispatch.rs  commit.rs  config.rs  dispatch.rs  docdispatch.rs  lib.rs  main.rs  metrics_http.rs  replica.rs  server.rs  shared.rs
crates/zydecodb/src/security/: acl.rs  audit.rs  keys.rs  limits.rs  mod.rs  quota.rs  ratelimit.rs  runtime.rs  session.rs  tls.rs
crates/zydecodb/tests/: acl_proptest.rs  auth_concurrency.rs  auth_roundtrip.rs  complexity_exhaustion.rs  concurrency.rs  conn_lifecycle.rs  crash_resilience.rs  document_e2e.rs  drop_tenant.rs  fair_pods_config.rs  fault_injection.rs  local_default_config.rs  metrics_http.rs  rate_limit_evasion.rs  rate_quota.rs  rawkv_concurrency.rs  replica_e2e.rs  resource_exhaustion.rs  security_suite.rs  shipping_abuse.rs  tcp_roundtrip.rs  tls_roundtrip.rs  uds_roundtrip.rs
crates/zydecodb/tests/common/: mod.rs
docs/: ARCHITECTURE.md  DOCUMENT_STORE.md  PODS.md  REPLICATION.md  SECURITY.md  SHIPPING.md  SOAK.md  UPGRADE.md
docs/archive/: README.md  engine-ga.md  l2-debug-history.md  master-plan.md  production-readiness.md
docs/archive/adr/: 0001-flatbuffers.md  0002-mvcc-design.md  0003-glommio.md
docs/archive/memos/: MEMO.md  MEMO2.md  MEMO3.MD  MEMO4.md  MEMO5.md  MEMO6.md
docs/soak-baselines/: README.md  memo4-90m.jsonl  memo6-6m-v2.jsonl  memo6-90m.jsonl
examples/: README.md  zydecodb_client.py
examples/user_backend/: app.py  requirements.txt  store.py
experiments/complex_query/: main.ts  package-lock.json  package.json
experiments/multitenant/: main.ts  package-lock.json  package.json  tsconfig.json
experiments/write_heavy/: go.mod  main.go
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_envelope.rs  fuzz_dispatch.rs  ipc_envelope.rs  manifest_parser.rs  sstable_reader.rs  wal_parser.rs
scripts/: deploy-website.sh  install.sh  tenant-isolation-soak.sh
