[workspace]
members = [
    "crates/zydecodb-engine",
    "crates/zydecodb-document",
    "crates/zydecodb",
    "crates/zydecodb-migrate",
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.9.0-beta.3"
edition = "2021"
rust-version = "1.91"
license-file = "../../LICENSE"

[workspace.dependencies]
bytes = "1"
crossbeam = "0.8"
crc32fast = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.11.0"
proptest = "1"
tempfile = "3"
fail = "0.5"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Controlled-crash poison policy: a panic while holding the engine `Mutex` would
# otherwise poison it, making every later `lock().unwrap()` panic in turn — a
# cascade that limps along on half-mutated in-memory state (the worst outcome
# for a database). Aborting turns any panic into a clean process exit so a
# supervisor restarts the node and WAL replay restores a consistent state.
# (Cargo always builds test/bench harnesses with unwind, so this does not affect
# `cargo test`.)
panic = "abort"
