[package]
name = "zydecodb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
zydecodb-engine = { path = "../crates/zydecodb-engine" }
tempfile = "3"

[[bin]]
name = "wal_parser"
path = "fuzz_targets/wal_parser.rs"
test = false
doc = false

[[bin]]
name = "ipc_envelope"
path = "fuzz_targets/ipc_envelope.rs"
test = false
doc = false

[[bin]]
name = "sstable_reader"
path = "fuzz_targets/sstable_reader.rs"
test = false
doc = false

[[bin]]
name = "manifest_parser"
path = "fuzz_targets/manifest_parser.rs"
test = false
doc = false

[workspace]
members = ["."]
