[package]
name = "zydecodb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"
zydecodb = { path = "../crates/zydecodb" }
zydecodb-engine = { path = "../crates/zydecodb-engine" }
zydecodb-document = { path = "../crates/zydecodb-document" }

[[bin]]
name = "decode_envelope"
path = "fuzz_targets/decode_envelope.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dispatch"
path = "fuzz_targets/fuzz_dispatch.rs"
test = false
doc = false
