[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zydecodb"
version = "0.9.0"
description = "Official Python driver for ZydecoDB."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dataparade" }]
keywords = ["zydecodb", "database", "document-store", "nosql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Front-Ends",
]
# Pure stdlib: no runtime dependencies.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/dataparade/zydecodb"
Source = "https://github.com/dataparade/zydecodb"

[tool.hatch.build.targets.wheel]
packages = ["zydecodb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
