[package]
name = "zydecodb-document"
description = "ZydecoDB document layer — collections, secondary indexes, and queries over the KV engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
name = "zydecodb_document"
path = "src/lib.rs"

[dependencies]
zydecodb-engine = { path = "../zydecodb-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
