[package]
name = "zydecodb"
description = "ZydecoDB — standalone database server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
name = "zydecodb"
path = "src/lib.rs"

[features]
# Forwards the engine's failpoint instrumentation so server-level tests can
# inject delays/faults (e.g. a slow WAL fsync) to exercise lock decoupling.
failpoints = ["zydecodb-engine/failpoints", "fail"]

[[bin]]
name = "zydecodb"
path = "src/main.rs"

[dependencies]
zydecodb-engine = { path = "../zydecodb-engine" }
zydecodb-document = { path = "../zydecodb-document" }
zydecodb-migrate = { path = "../zydecodb-migrate" }
prometheus = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "1"
argon2 = "0.5"
rand = "0.8"
sha2 = { workspace = true }
rustls = "0.23"
rustls-pemfile = "2"
tiny_http = "0.12"
signal-hook = "0.3"
polling = "3"
arc-swap = "1.9.2"
fail = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
rcgen = "0.13"
fail = { workspace = true }
proptest = { workspace = true }
